2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/glade/preferences_dialog.glade: HTTP proxy preferences.
    This is useful for plugins like "google translate".

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: First click on "cancel" now
    kills the "search available databases" thread if it's still running. In
    that case, a second click is needed to close the window.

2007-10-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed typo.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Fixed cache support.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Don't update the search entry when a match
    is clicked in the match sidepane.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: The source was not closed
    after using it.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed crash when a word in kana is
    entered.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Don't use the dotted line as the end of
    definition marker. This is more reliable.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Handles the case when no strategies are
    available.

2007-10-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Fixed String#kana? so that a string containing
    both hiragana and katakana returns true. Added String#japanese?.
    * lib/fantasdic/sources/edict_file.rb: Added a new source to look up words
    in an EDICT file. The implementation uses egrep for performance. A pure
    Ruby implementation needs be added for cases when egrep isn't available.